tests/nginx-to-traefik/fixtures/basic-three-services/input/common.traefik/overlays/dev/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-managed-cert
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - temporal.dev.example.com
    secretName: app-managed-cert-tls
  rules:
  - host: temporal.dev.example.com
